--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_messaging: ^14.4.0
   uni_links: ^0.5.1
   firebase_dynamic_links: ^5.1.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
