--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   uni_links: ^0.5.1
   firebase_dynamic_links: ^5.1.0
   dartz: ^0.10.1
+  hive: ^2.2.3
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.14
+  flutter_local_notifications: ^8.2.0
 
 dev_dependencies:
   flutter_test:
