--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path: ^1.8.2
   sqlite3_flutter_libs: ^0.5.13
   drift_dev: ^2.6.0
+  alert_banner: ^1.0.0
 
 dev_dependencies:
   flutter_test:
